name: ethereum-rlp
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: Ethereum Recursive Length Prefix Encoding
category:      Data Structures
license: BSD3
description:  
    RLP, as described in the Ethereum Yellowpaper

source-repository head
  type:     git
  location: https://github.com/jamshidh/ethereum-merkle-patricia-db

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-merkle-patricia-db
  branch:   master
  tag:      v0.0.2
 
library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , bytestring
                 , base16-bytestring
                 , haskoin
    exposed-modules:
                   Data.RLP
    ghc-options: -Wall
    buildable: True
    hs-source-dirs: src

Test-Suite test-nibblestring
    default-language: Haskell98
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test, src
    build-depends:      base >=4 && < 5
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , containers